--- a/index.html
+++ b/index.html
@@ -1,53 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Challenge</title>
+  </head>
   <body>
-    <h2>Kayıt Formu</h2>
-
-    <form action="/submit_form.html" method="get">
-      <!-- Text Input -->
-      <label for="fname">Ad:</label><br />
-      <input type="text" id="fname" name="fname" required /><br />
-
-      <label for="lname">Soyad:</label><br />
-      <input type="text" id="lname" name="lname" required /><br />
-
-      <!-- Email Input -->
-      <label for="email">E-posta:</label><br />
-      <input type="email" id="email" name="email" required /><br />
-
-      <!-- Password Input -->
-      <label for="pwd">Şifre:</label><br />
-      <input type="password" id="pwd" name="pwd" minlength="8" required /><br />
-
-      <!-- Date Input -->
-      <label for="dob">Doğum tarihi:</label><br />
-      <input type="date" id="dob" name="dob" required /><br />
-
-      <!-- Radio Button Input -->
-      <p>Cinsiyet:</p>
-      <input type="radio" id="male" name="gender" value="male" required />
-      <label for="male">Erkek</label><br />
-      <input type="radio" id="female" name="gender" value="female" required />
-      <label for="female">Kadın</label><br />
-
-      <!-- Checkbox Input -->
-      <input type="checkbox" id="terms" name="terms" required />
-      <label for="terms">Kullanım şartlarını kabul ediyorum.</label><br />
-
-      <!-- Textarea Input -->
-      <label for="message">Mesaj:</label><br />
-      <textarea id="message" name="message" rows="4" cols="50"></textarea><br />
-
-      <!-- Select Input -->
-      <label for="country">Ülke:</label><br />
-      <select id="country" name="country">
-        <option value="turkey">Türkiye</option>
-        <option value="usa">ABD</option>
-        <option value="germany">Almanya</option></select
-      ><br />
-
-      <!-- Submit Button -->
-      <input type="submit" value="Gönder" />
-    </form>
+    <!-- <h1>Table will go here</h1> -->
+    <table style="border: 1px solid black">
+      <th>first name</th>
+      <th>last name</th>
+      <th>age</th>
+      <tr>
+        <td>Ahmet</td>
+        <td>Öztürk</td>
+        <td>23</td>
+      </tr>
+      <tr>
+        <td>Emir</td>
+        <td>Emiroğlu</td>
+        <td>25</td>
+      </tr>
+      <tr>
+        <td>Halil</td>
+        <td>Saydam</td>
+        <td>34</td>
+      </tr>
+    </table>
   </body>
 </html>
