--- a/index.html
+++ b/index.html
@@ -4,28 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Challenge</title>
+
+    <style>
+      .em {
+        background: linear-gradient(to right, red, yellow);
+      }
+    </style>
   </head>
   <body>
-    <!-- <h1>Table will go here</h1> -->
-    <table style="border: 1px solid black">
-      <th>first name</th>
-      <th>last name</th>
-      <th>age</th>
-      <tr>
-        <td>Ahmet</td>
-        <td>Öztürk</td>
-        <td>23</td>
-      </tr>
-      <tr>
-        <td>Emir</td>
-        <td>Emiroğlu</td>
-        <td>25</td>
-      </tr>
-      <tr>
-        <td>Halil</td>
-        <td>Saydam</td>
-        <td>34</td>
-      </tr>
-    </table>
+    <div class="em">Lorem ipsum dolor sit, amet</div>
   </body>
 </html>
